; ModuleID = '/home/carl/AnghaBench/systemd/src/login/extr_logind-dbus.c_manager_send_changed.c'
source_filename = "/home/carl/AnghaBench/systemd/src/login/extr_logind-dbus.c_manager_send_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [24 x i8] c"/org/freedesktop/login1\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"org.freedesktop.login1.Manager\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @manager_send_changed(%struct.TYPE_4__* %0, i8* %1, ...) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = call i32 @assert(%struct.TYPE_4__* %6)
  %8 = load i8*, i8** %4, align 8
  %9 = call i8** @strv_from_stdarg_alloca(i8* %8)
  store i8** %9, i8*** %5, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8**, i8*** %5, align 8
  %14 = call i32 @sd_bus_emit_properties_changed_strv(i32 %12, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8** %13)
  ret i32 %14
}

declare dso_local i32 @assert(%struct.TYPE_4__*) #1

declare dso_local i8** @strv_from_stdarg_alloca(i8*) #1

declare dso_local i32 @sd_bus_emit_properties_changed_strv(i32, i8*, i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
